Fix: console.log 삭제, TodoInfo.css textarea overflow:auto로 수정

--- a/01.javascript/todoapp-router/assets/css/TodoInfo.css
+++ b/01.javascript/todoapp-router/assets/css/TodoInfo.css
@@ -20,7 +20,7 @@
 .TodoInfo-content {
   font-size: 20px;
   height: 350px;
-  overflow-y: scroll;
+  overflow-y: auto;
   border-bottom: 1px solid #777;
   margin-bottom: 28px;
   padding-bottom: 28px;
